--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,7 @@ use_frameworks!
 
 target 'LiquidFloatingActionButton_Example' do
   pod "LiquidFloatingActionButton", :path => "../"
-  pod 'SnapKit'
+#  pod 'SnapKit'
 end
 
 target 'LiquidFloatingActionButton_Tests' do
